--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="login">Login</string>
     <string name="register">Register</string>
     <string name="google_signin">Google SignIn</string>
-    <string name="telephone">Google SignIn</string>
+    <string name="telephone">Telephone</string>
 </resources>
