--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="register">Register</string>
     <string name="google_signin">Google SignIn</string>
     <string name="telephone">Telephone</string>
+    <string name="admin_redirect">Admin page Redirect</string>
 </resources>
