--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="telephone">Telephone</string>
     <string name="admin_redirect">Admin page Redirect</string>
     <string name="admin_faile">Admin is not page Redirect</string>
+    <string name="register_redirect">Register page Redirect</string>
 </resources>
