--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="boy">boy</string>
     <string name="kilo">kilo</string>
     <string name="cinsiyet">cinsiyet</string>
+    <string name="ideal">ideal</string>
     <string name="bay">bay</string>
     <string name="bayan">bayan</string>
     <string name="zayif">zayif</string>
