--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="not_register">Üye kayıtı yapılamadı</string>
     <string name="forgot_password">Şifremi Unuttum</string>
 
+    <string name="submit">Gönder</string>
+
     <!--VKI-->
     <string name="sonuc">sonuc</string>
     <string name="boy">boy</string>
